--- a/shopusa/web-app/css/style.css
+++ b/shopusa/web-app/css/style.css
@@ -162,8 +162,8 @@ table.data-table tr.even td {background: #FCFCFC;}
 
 .error, .notice, .success {
 	border: 1px solid #DDD;
-	margin-bottom: 1em;
-	padding: 0.6em 0.8em;
+	/* margin-bottom: 1em;
+	padding: 0.6em 0.8em; */
 }
 
 .error {background: #FBE3E4; color: #8A1F11; border-color: #FBC2C4;}
